feat(injector): optimize for 5M+ contracts with DB persistence and fault tolerance
- Optimize line mapper with fast indexOf-based parsing (eliminate regex overhead)
- Reduce defensive copies in CtrBlock and optimize CtrBlockLineAggregator with StringBuilder
- Add CompositeItemWriter supporting both FlatFileItemWriter and JdbcBatchItemWriter
- Configure PostgreSQL persistence with upsert and reRewriteBatchedInserts
- Implement block-level fault tolerance (faultTolerant, skipLimit, CtrBlockSkipListener, processor filtering)
- Tune chunk-size to 500 and logging levels to INFO for production
- Add test profile with H2 in-memory datasource